corrected spacing error

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
 body {
   background-color:grey;
+  text-align: left;
+}
+h1 {
+  color:purple;
+}
+.about {
+  background-color: yellow;
+  font-family:'monaco';
+  font-style: italic;
+}
+.mypotfolio {
+  font-weight: bold;
 }
